# can't get this to compile for some reason
# commands:
# cargo run --bin client
# cargo run --bin server

[package]
name = "grpc-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "1.4.1"
grpc = "0.2.1"
tls-api = "0.1.8"

[build-dependencies]
protoc-rust-grpc = "0.2.1"
